syntax = "proto3";

package social.post.v1;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";


// Message definitions

message User {
  string id = 1;
  string name = 2;
  string avatar = 3;
  optional string title = 4;
  google.protobuf.Int32Value points = 5;
}

message ImageTransform {
  double rotation = 1;
  bool flipH = 2;
  bool flipV = 3;
  double zoom = 4;
  double straighten = 5;
  string aspectRatio = 6;
  string filter = 7;
  double brightness = 8;
  double contrast = 9;
  double saturation = 10;
  double temperature = 11;
  double highlights = 12;
  double shadows = 13;
  string altText = 14;
}

message VideoTransform {
  // Add video transform fields if needed
}

message PollOption {
  int32 id = 1;
  string text = 2;
}

message Poll {
  string question = 1;
  repeated PollOption options = 2;
  int32 durationDays = 3;
}

message Media {
  string id = 1;
  string type = 2;
  string name = 3;
  string url = 4;
  repeated User taggedUsers = 5;

  oneof transform {
    ImageTransform imageTransform = 6;
    VideoTransform videoTransform = 7;
  }
}

message Post {
  string content = 1;
  repeated Media media = 2;
  optional Poll poll = 3;
  string visibility = 4;
  string comment_control = 5;
}

// Request & Response

message CreatePostRequest {
  Post post = 1;
}

message CreatePostResponse {
  string message = 2;
}

// Service definition

service PostService {
  rpc CreatePost (CreatePostRequest) returns (CreatePostResponse);
}